syntax = "proto3";

package controller.api.resources.groups.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/resources/groups;groups";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Member {
	// The ID of the member.
	// Output only.
	string id = 1;

	// The type of the member.
	// Output only.
	string type = 2;

	// The scope ID of the member.
	// Output only.
	string scope_id = 3 [json_name="scope_id"];
}

// Group contains all fields related to a Group resource
message Group {
	// The ID of the Project
	// Output only.
	string id = 1;

	// Optional name for identification purposes
	google.protobuf.StringValue name = 2;

	// Optional user-set descripton for identification purposes
	google.protobuf.StringValue description = 3;

	// The time this resource was created
	// Output only.
	google.protobuf.Timestamp created_time = 4 [json_name="created_time"];

	// The time this resource was last updated.
	// Output only.
	google.protobuf.Timestamp updated_time = 5 [json_name="updated_time"];

	// Whether the resource is disabled
	google.protobuf.BoolValue disabled = 6;

	// Contains the list of member ids in this group.
	// Output only.
	repeated string member_ids = 7;

	// The members of this group.
	// Output only.
	repeated Member members = 10;
}
