syntax = "proto3";
package controller.custom_options.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/protooptions;protooptions";

extend google.protobuf.FieldOptions {
	// mask_mapping is an option which tags a field with the expected field mask
	// used by a companion proto if applied on the field this option is for.
	// The value of this option should be for the field name itself and not for
	// the json name.
	MaskMapping mask_mapping = 85464;

	// generate_sdk_option is a directive used when generating the SDK to
	// indicate that an option should be created for the field
	bool generate_sdk_option = 85412;
}

message MaskMapping {
	string this = 1;
	string that = 2;
}